// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GivenDarkTheme_WhenRenderingSendState_ThenExposeSendButtonIcon: DarkSendActionButtonMarkup 1`] = `
<button
  aria-label="发送"
  class="action-button action-button-send"
  type="button"
>
  <span
    aria-hidden="true"
    class="action-button-icon"
    data-icon-name="send-button"
    data-render-mode="inline"
    draggable="false"
  >
    file-mock
  </span>
</button>
`;

exports[`GivenLanguageControlsHidden_WhenRendering_ThenCollapseLanguageSlot: VoiceActionButtonMarkup 1`] = `
<button
  aria-label="语音"
  aria-pressed="false"
  class="action-button action-button-voice"
  disabled=""
  type="button"
>
  <span
    aria-hidden="true"
    class="action-button-icon"
    data-icon-name="voice-button"
    data-render-mode="inline"
    draggable="false"
  >
    file-mock
  </span>
</button>
`;

exports[`GivenStandardProps_WhenRenderingView_ThenMatchSnapshot 1`] = `
<div>
  <form
    class="input-wrapper"
  >
    <div
      aria-label="dictionary search"
      class="search-box input-surface"
      data-language-visible="true"
      data-testid="searchbar"
      role="search"
    >
      <div
        class="language-slot"
        data-visible="true"
      >
        <div
          aria-label="源语言 → 目标语言"
          class="language-shell"
          role="group"
        >
          <div
            class="language-select-wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="源语言"
              class="language-trigger"
              data-open="false"
              data-variant="source"
              title="中文"
              type="button"
            >
              <span
                class="language-trigger-content"
              >
                <span
                  class="language-trigger-code"
                >
                  ZH
                </span>
                <span
                  class="language-trigger-label"
                  data-visible="false"
                >
                  中文
                </span>
              </span>
            </button>
          </div>
          <button
            aria-label="交换语向"
            class="language-swap"
            title="交换语向"
            type="button"
          >
            →
          </button>
          <div
            class="language-select-wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="目标语言"
              class="language-trigger"
              data-open="false"
              data-variant="target"
              title="英文"
              type="button"
            >
              <span
                class="language-trigger-content"
              >
                <span
                  class="language-trigger-code"
                >
                  EN
                </span>
                <span
                  class="language-trigger-label"
                  data-visible="false"
                >
                  英文
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <span
        aria-hidden="true"
        class="input-divider"
        data-visible="true"
      />
      <div
        class="text-slot"
      >
        <div
          class="core-input"
        >
          <textarea
            class="textarea"
            placeholder="Say something"
            rows="2"
          >
            example
          </textarea>
          <button
            aria-hidden="true"
            class="submit-proxy"
            tabindex="-1"
            type="submit"
          />
        </div>
      </div>
      <div
        class="action-slot"
      >
        <button
          aria-label="发送"
          class="action-button action-button-send"
          type="button"
        >
          <span
            aria-hidden="true"
            class="action-button-icon"
            data-icon-name="send-button"
            data-render-mode="inline"
            draggable="false"
          >
            file-mock
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;
